# PitchVC

./: .gitignore  Description.md  LICENSE  README.md  asv.py  config_v1_16k.json  convert.txt  convert_mp.py  convert_sp.py  meldataset.py  models.py  requirements.txt  train.py
Utils/JDC/: bst.t7.txt
filelists/: f0_stats.json  spk2id.json  spk_stats.json  test.txt  train.txt  val.txt
metrics/asr/: asr.py  asr_sp.py  get_gt.py  run.sh
metrics/asv/: get_txt.py  run.sh  ssim.py  ssim_sp.py
metrics/f0pcc/: pcc.py  pcc_sp.py  run.sh
metrics/macs/: macs.py  run.sh
metrics/mcd_f0rmse/: f0rmse.py  get_map.py  get_map2.py  get_txt.py  get_valid.py  mcd.py  norm.py  run.sh  utils.py
metrics/mos/: mos.py
metrics/rtf/: rtf.py  run.sh
metrics/utmos/: run.sh  utmos.py
onnx_/: README.md  convert.py  export_g1.py  export_g2.py  models_onnx.py
openvino_/: README.md  convert.py  export_g1.py  export_g2.py
openvino_/cpp/: CMakeLists.txt  README.md  build.sh  infer.sh
openvino_/cpp/assets/: get_mel_basis.py  infer.txt  mel_basis.npy  mel_basis.pt
openvino_/cpp/common/: CMakeLists.txt
openvino_/cpp/include/: fft.hpp  tensor.h
openvino_/cpp/src/: CMakeLists.txt  main.cpp
preprocess/: 1_downsample.py  2_get_flist.py  3_get_spk2id.py  5_get_spk_emb_best.py  6_get_f0.py  7_get_f0_stats.py
speaker_encoder/: audio.py
speaker_encoder/ckpt/: pretrained_bak_5805000.pt.txt
speakerlab/pretrained/speech_eres2net_sv_en_voxceleb_16k/: pretrained_eres2net.ckpt.txt
test/: 1_select_tgt.py  2_select_src.py  3_get_txts.py
test/spk_gender/: esd.txt  libri-speaker.txt
(+10 files in other folders)
